--- a/src/scss/component/home/index.scss
+++ b/src/scss/component/home/index.scss
@@ -82,6 +82,10 @@
         }
     }
 
+    &__inner-content {
+        overflow: hidden;
+    }
+
     &__item {
         margin-bottom: rem(20);
     }
